--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,12 +1,13 @@
 body {
   background: rgb(41, 41, 41);
   color: white;
-  width: 100vh - 64px;
-  height: 100vh - 64px;
+  width: 98vw;
+  height: 97vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 input {
@@ -50,4 +51,58 @@ button:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(41, 41, 41); /* Black with opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+  text-align: center;
+}
+
+/* Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn-danger {
+  background-color: red;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-cancel {
+  background-color: rgb(68, 68, 68);;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
 }
