--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 <body>
+    <%- include('partials/header.ejs'), {username: username, isAdmin: isAdmin} %>
     <h1>Admin Panel</h1>
     <h2>Manage Users</h2>
 
@@ -40,6 +41,4 @@
             <% }); %>
         </tbody>
     </table>
-
-    <p><a href="/logout">Logout</a></p>
 </body>
