--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 <body>
+  <%- include('partials/header.ejs'), {username: username, isAdmin: isAdmin} %>
   <p>Don't have an account? <a href="/register">Sign up here</a></p>
   <p>Already have an account? <a href="/login">Login here</a></p>
 </body>
