--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,7 +19,7 @@
       <input type="password" name="password" required>
 
       <label for="bio">Bio:</label>
-      <textarea name="bio"></textarea>
+      <input name="bio"></input>
 
       <label for="profile_picture">Profile Picture URL:</label>
       <input type="text" name="profile_picture">
