--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
   <%- include('partials/header.ejs'), {username: username, isAdmin: isAdmin} %>
-  <p>Don't have an account? <a href="/register">Sign up here</a></p>
-  <p>Already have an account? <a href="/login">Login here</a></p>
+  <h1>Welcome <%= username %>!</h1>
+  <p>this is just a test space nothing really useful other than i was bored and i made an account and profile system thing</p>
 </body>
