add posts page and the ability to view images on posts page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
   <%- include('partials/header.ejs'), {username: username, isAdmin: isAdmin} %>
-  <h1>Welcome <%= username %>!</h1>
+  <h1>Welcome <%= displayUser %>!</h1>
   <p>this is just a test space nothing really useful other than i was bored and i made an account and profile system thing</p>
 </body>
