--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,7 @@
   <div class="header">
     <a href="/"><button style="background-color: rgb(41, 41, 41);">Home</button></a>
     <a href="/users"><button style="background-color: rgb(41, 41, 41);">Users</button></a>
+    <a href="/posts"><button style="background-color: rgb(41, 41, 41);">Posts</button></a>
     <% if (username) { %>
         <a href="/profile/<%= username %>"><button style="background-color: rgb(41, 41, 41); right: 25px; position: absolute; bottom: 12px;" >Profile</button></a>
     <% } else { %>
